// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store: ConnectionHistory convertClaimOfferToHistoryEvent should raise success 1`] = `
Object {
  "action": "RECEIVED",
  "data": Array [
    Object {
      "data": "Address Address Address",
      "label": "Address 1",
    },
    Object {
      "data": "Address 2 Address 2 Address 2",
      "label": "Address 2",
    },
  ],
  "id": "a4f35623-b50c-40ea-a2b0-f7cd06e03142",
  "name": "Home Address",
  "originalPayload": Object {
    "payload": Object {
      "data": Object {
        "claimDefinitionSchemaSequenceNumber": 36,
        "name": "Home Address",
        "revealedAttributes": Array [
          Object {
            "data": "Address Address Address",
            "label": "Address 1",
          },
          Object {
            "data": "Address 2 Address 2 Address 2",
            "label": "Address 2",
          },
        ],
        "version": "1.0.0",
      },
      "issuer": Object {
        "did": "issuerDid",
        "name": "Test Issuer",
      },
      "statusMsg": "pending",
    },
    "payloadInfo": Object {
      "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
      "senderLogoUrl": "http://testissuer.com/logoUrl.png",
      "uid": "usd123",
    },
    "type": "CLAIM_OFFER_RECEIVED",
  },
  "remoteDid": "ha66899sadfjZJGINKN0770",
  "status": "RECEIVED",
  "timestamp": "2018-01-10T04:32:43+05:30",
  "type": "CLAIM",
}
`;

exports[`Store: ConnectionHistory convertConnectionSuccessToHistoryEvent should raise success 1`] = `
Object {
  "action": "CONNECTED",
  "data": Array [
    Object {
      "data": "2018-01-10T04:32:43+05:30",
      "label": "Established On",
    },
  ],
  "id": "a4f35623-b50c-40ea-a2b0-f7cd06e03142",
  "name": "sender1",
  "originalPayload": Object {
    "connection": Object {
      "identifier": "pairwiseIdentifier1",
      "logoUrl": "lu",
      "myPairwiseAgentDid": "myPairwiseAgentDID",
      "myPairwiseAgentVerKey": "myPairwiseAgentVerKey",
      "myPairwiseDid": "pairwiseIdentifier1",
      "myPairwisePeerVerKey": "senderVerificationKey1",
      "myPairwiseVerKey": "pairwiseVerificationKey1",
      "requestId": "requestId1",
      "senderAgencyDetail": Object {
        "DID": "senderDID1",
        "endpoint": "endpoint",
        "verKey": "senderVerificationKey1",
      },
      "senderAgentKeyDelegationProof": Object {
        "agentDID": "senderAgentDID1",
        "agentDelegatedKey": "agentDelegatedKey",
        "signature": "signature",
      },
      "senderDID": "senderDID1",
      "senderDetail": Object {
        "DID": "senderDID1",
        "agentKeyDlgProof": Object {
          "agentDID": "senderAgentDID1",
          "agentDelegatedKey": "agentDelegatedKey",
          "signature": "signature",
        },
        "logoUrl": "http://testissuer.com/logoUrl.png",
        "name": "sender1",
        "verKey": "senderVerificationKey1",
      },
      "senderEndpoint": "endpoint",
      "senderLogoUrl": "lu",
      "senderName": "sender1",
      "senderVerificationKey": "sVk",
      "targetName": "target name",
    },
    "type": "NEW_CONNECTION_SUCCESS",
  },
  "remoteDid": "senderDID1",
  "status": "CONNECTED",
  "timestamp": "2018-01-10T04:32:43+05:30",
  "type": "INVITATION",
}
`;

exports[`Store: ConnectionHistory convertInvitationToHistoryEvent should raise success 1`] = `
Object {
  "action": "CONNECTION REQUEST",
  "data": Object {},
  "id": "a4f35623-b50c-40ea-a2b0-f7cd06e03142",
  "name": "sender1",
  "originalPayload": Object {
    "requestId": "requestId1",
    "senderAgencyDetail": Object {
      "DID": "senderDID1",
      "endpoint": "endpoint",
      "verKey": "senderVerificationKey1",
    },
    "senderAgentKeyDelegationProof": Object {
      "agentDID": "senderAgentDID1",
      "agentDelegatedKey": "agentDelegatedKey",
      "signature": "signature",
    },
    "senderDID": "senderDID1",
    "senderDetail": Object {
      "DID": "senderDID1",
      "agentKeyDlgProof": Object {
        "agentDID": "senderAgentDID1",
        "agentDelegatedKey": "agentDelegatedKey",
        "signature": "signature",
      },
      "logoUrl": "http://testissuer.com/logoUrl.png",
      "name": "sender1",
      "verKey": "senderVerificationKey1",
    },
    "senderEndpoint": "endpoint",
    "senderLogoUrl": "lu",
    "senderName": "sender1",
    "senderVerificationKey": "sVk",
    "targetName": "target name",
  },
  "remoteDid": "senderDID1",
  "status": "CONNECTION REQUEST",
  "timestamp": "2018-01-10T04:32:43+05:30",
  "type": "INVITATION",
}
`;

exports[`Store: ConnectionHistory convertProofAutoFillToHistoryEvent should raise success 1`] = `
Object {
  "action": "SHARED",
  "data": Array [
    Object {
      "data": "address1",
      "label": "address1",
    },
    Object {
      "data": "address2",
      "label": "address2",
    },
  ],
  "id": "a4f35623-b50c-40ea-a2b0-f7cd06e03142",
  "name": "proof_req_1",
  "originalPayload": Object {
    "requestedAttributes": Array [
      Object {
        "data": "address1",
        "label": "address1",
      },
      Object {
        "data": "address2",
        "label": "address2",
      },
    ],
    "type": "PROOF_REQUEST_AUTO_FILL",
    "uid": "pid123",
  },
  "remoteDid": "remotePairWiseDID",
  "status": "SHARED",
  "timestamp": "2018-01-10T04:32:43+05:30",
  "type": "PROOF",
}
`;

exports[`Store: ConnectionHistory convertProofRequestToHistoryEvent should raise success 1`] = `
Object {
  "action": "PROOF RECEIVED",
  "data": Array [
    Object {
      "label": "Address 1",
    },
    Object {
      "label": "Address 2",
    },
  ],
  "id": "a4f35623-b50c-40ea-a2b0-f7cd06e03142",
  "name": "Home Address",
  "originalPayload": Object {
    "payload": Object {
      "data": Object {
        "name": "Home Address",
        "requestedAttributes": Array [
          Object {
            "label": "Address 1",
          },
          Object {
            "label": "Address 2",
          },
        ],
        "version": "1.0.0",
      },
      "originalProofRequestData": Object {
        "name": "proof_req_1",
        "nonce": "123432421212",
        "requested_attrs": Object {
          "attr1_uuid": Object {
            "issuer_did": "issuerDid",
            "name": "address1",
            "schema_seq_no": 36,
          },
          "attr2_uuid": Object {
            "issuer_did": "issuerDid",
            "name": "address2",
            "schema_seq_no": 36,
          },
        },
        "requested_predicates": Object {},
        "version": "0.1",
      },
      "requester": Object {
        "name": "Test Issuer",
      },
      "statusMsg": "pending",
    },
    "payloadInfo": Object {
      "remotePairwiseDID": "senderDID1",
      "senderLogoUrl": "http://testissuer.com/logoUrl.png",
      "uid": "pid123",
    },
    "type": "PROOF_REQUEST_RECEIVED",
  },
  "remoteDid": "senderDID1",
  "status": "PROOF RECEIVED",
  "timestamp": "2018-01-10T04:32:43+05:30",
  "type": "PROOF",
}
`;

exports[`Store: ConnectionHistory match loadHistory 1`] = `
Object {
  "data": null,
  "error": null,
  "isLoading": true,
}
`;

exports[`Store: ConnectionHistory match loadHistoryFail 1`] = `
Object {
  "data": null,
  "error": Object {
    "code": "TEST 101",
    "message": "Load History failed",
  },
  "isLoading": false,
}
`;

exports[`Store: ConnectionHistory match loadHistorySuccess 1`] = `
Object {
  "data": Object {
    "senderDID1": Array [
      Object {
        "action": "CONNECTION REQUEST",
        "data": Object {},
        "id": "a4f35623-b50c-40ea-a2b0-f7cd06e03142",
        "name": "sender1",
        "originalPayload": Object {
          "requestId": "requestId1",
          "senderAgencyDetail": Object {
            "DID": "senderDID1",
            "endpoint": "endpoint",
            "verKey": "senderVerificationKey1",
          },
          "senderAgentKeyDelegationProof": Object {
            "agentDID": "senderAgentDID1",
            "agentDelegatedKey": "agentDelegatedKey",
            "signature": "signature",
          },
          "senderDID": "senderDID1",
          "senderDetail": Object {
            "DID": "senderDID1",
            "agentKeyDlgProof": Object {
              "agentDID": "senderAgentDID1",
              "agentDelegatedKey": "agentDelegatedKey",
              "signature": "signature",
            },
            "logoUrl": "http://testissuer.com/logoUrl.png",
            "name": "sender1",
            "verKey": "senderVerificationKey1",
          },
          "senderEndpoint": "endpoint",
          "senderLogoUrl": "lu",
          "senderName": "sender1",
          "senderVerificationKey": "sVk",
          "targetName": "target name",
        },
        "remoteDid": "senderDID1",
        "status": "CONNECTION REQUEST",
        "timestamp": "2018-01-10T04:32:43+05:30",
        "type": "INVITATION",
      },
      Object {
        "action": "CONNECTED",
        "data": Array [
          Object {
            "data": "2018-01-10T04:32:43+05:30",
            "label": "Established On",
          },
        ],
        "id": "a4f35623-b50c-40ea-a2b0-f7cd06e03142",
        "name": undefined,
        "originalPayload": Object {
          "connection": Object {
            "newConnection": Object {
              "identifier": "pairwiseIdentifier1",
              "logoUrl": "lu",
              "myPairwiseAgentDid": "myPairwiseAgentDID",
              "myPairwiseAgentVerKey": "myPairwiseAgentVerKey",
              "myPairwiseDid": "pairwiseIdentifier1",
              "myPairwisePeerVerKey": "senderVerificationKey1",
              "myPairwiseVerKey": "pairwiseVerificationKey1",
              "requestId": "requestId1",
              "senderAgencyDetail": Object {
                "DID": "senderDID1",
                "endpoint": "endpoint",
                "verKey": "senderVerificationKey1",
              },
              "senderAgentKeyDelegationProof": Object {
                "agentDID": "senderAgentDID1",
                "agentDelegatedKey": "agentDelegatedKey",
                "signature": "signature",
              },
              "senderDID": "senderDID1",
              "senderDetail": Object {
                "DID": "senderDID1",
                "agentKeyDlgProof": Object {
                  "agentDID": "senderAgentDID1",
                  "agentDelegatedKey": "agentDelegatedKey",
                  "signature": "signature",
                },
                "logoUrl": "http://testissuer.com/logoUrl.png",
                "name": "sender1",
                "verKey": "senderVerificationKey1",
              },
              "senderEndpoint": "endpoint",
              "senderLogoUrl": "lu",
              "senderName": "sender1",
              "senderVerificationKey": "sVk",
              "targetName": "target name",
            },
          },
          "type": "NEW_CONNECTION",
        },
        "remoteDid": undefined,
        "status": "CONNECTED",
        "timestamp": "2018-01-10T04:32:43+05:30",
        "type": "INVITATION",
      },
      Object {
        "action": "RECEIVED",
        "data": Array [
          Object {
            "data": "Address Address Address",
            "label": "Address 1",
          },
          Object {
            "data": "Address 2 Address 2 Address 2",
            "label": "Address 2",
          },
        ],
        "id": "a4f35623-b50c-40ea-a2b0-f7cd06e03142",
        "name": "Home Address",
        "originalPayload": Object {
          "payload": Object {
            "data": Object {
              "claimDefinitionSchemaSequenceNumber": 36,
              "name": "Home Address",
              "revealedAttributes": Array [
                Object {
                  "data": "Address Address Address",
                  "label": "Address 1",
                },
                Object {
                  "data": "Address 2 Address 2 Address 2",
                  "label": "Address 2",
                },
              ],
              "version": "1.0.0",
            },
            "issuer": Object {
              "did": "issuerDid",
              "name": "Test Issuer",
            },
            "statusMsg": "pending",
          },
          "payloadInfo": Object {
            "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
            "senderLogoUrl": "http://testissuer.com/logoUrl.png",
            "uid": "usd123",
          },
          "type": "CLAIM_OFFER_RECEIVED",
        },
        "remoteDid": "ha66899sadfjZJGINKN0770",
        "status": "RECEIVED",
        "timestamp": "2018-01-10T04:32:43+05:30",
        "type": "CLAIM",
      },
      Object {
        "action": "PROOF RECEIVED",
        "data": Array [
          Object {
            "label": "Address 1",
          },
          Object {
            "label": "Address 2",
          },
        ],
        "id": "a4f35623-b50c-40ea-a2b0-f7cd06e03142",
        "name": "Home Address",
        "originalPayload": Object {
          "payload": Object {
            "data": Object {
              "name": "Home Address",
              "requestedAttributes": Array [
                Object {
                  "label": "Address 1",
                },
                Object {
                  "label": "Address 2",
                },
              ],
              "version": "1.0.0",
            },
            "originalProofRequestData": Object {
              "name": "proof_req_1",
              "nonce": "123432421212",
              "requested_attrs": Object {
                "attr1_uuid": Object {
                  "issuer_did": "issuerDid",
                  "name": "address1",
                  "schema_seq_no": 36,
                },
                "attr2_uuid": Object {
                  "issuer_did": "issuerDid",
                  "name": "address2",
                  "schema_seq_no": 36,
                },
              },
              "requested_predicates": Object {},
              "version": "0.1",
            },
            "requester": Object {
              "name": "Test Issuer",
            },
            "statusMsg": "pending",
          },
          "payloadInfo": Object {
            "remotePairwiseDID": "senderDID1",
            "senderLogoUrl": "http://testissuer.com/logoUrl.png",
            "uid": "pid123",
          },
          "type": "PROOF_REQUEST_RECEIVED",
        },
        "remoteDid": "senderDID1",
        "status": "PROOF RECEIVED",
        "timestamp": "2018-01-10T04:32:43+05:30",
        "type": "PROOF",
      },
      Object {
        "action": "SHARED",
        "data": Array [
          Object {
            "data": "Address 1",
            "label": "address1",
          },
          Object {
            "data": "Address 2",
            "label": "address2",
          },
        ],
        "id": "a4f35623-b50c-40ea-a2b0-f7cd06e03142",
        "name": "Home Address",
        "originalPayload": Object {
          "requestedAttributes": Array [
            Object {
              "data": "Address 1",
              "label": "address1",
            },
            Object {
              "data": "Address 2",
              "label": "address2",
            },
          ],
          "type": "PROOF_REQUEST_AUTO_FILL",
          "uid": "pid123",
        },
        "remoteDid": "senderDID1",
        "status": "SHARED",
        "timestamp": "2018-01-10T04:32:43+05:30",
        "type": "PROOF",
      },
    ],
  },
  "error": null,
  "isLoading": false,
}
`;

exports[`Store: ConnectionHistory match record history event 1`] = `
Object {
  "data": Object {
    "ha66899sadfjZJGINKN0770": Array [
      Object {
        "action": "RECEIVED",
        "data": Array [
          Object {
            "data": "Address Address Address",
            "label": "Address 1",
          },
          Object {
            "data": "Address 2 Address 2 Address 2",
            "label": "Address 2",
          },
        ],
        "id": "a4f35623-b50c-40ea-a2b0-f7cd06e03142",
        "name": "Home Address",
        "originalPayload": Object {
          "payload": Object {
            "data": Object {
              "claimDefinitionSchemaSequenceNumber": 36,
              "name": "Home Address",
              "revealedAttributes": Array [
                Object {
                  "data": "Address Address Address",
                  "label": "Address 1",
                },
                Object {
                  "data": "Address 2 Address 2 Address 2",
                  "label": "Address 2",
                },
              ],
              "version": "1.0.0",
            },
            "issuer": Object {
              "did": "issuerDid",
              "name": "Test Issuer",
            },
            "statusMsg": "pending",
          },
          "payloadInfo": Object {
            "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
            "senderLogoUrl": "http://testissuer.com/logoUrl.png",
            "uid": "usd123",
          },
          "type": "CLAIM_OFFER_RECEIVED",
        },
        "remoteDid": "ha66899sadfjZJGINKN0770",
        "status": "RECEIVED",
        "timestamp": "2018-01-10T04:32:43+05:30",
        "type": "CLAIM",
      },
    ],
  },
  "error": null,
  "isLoading": false,
}
`;
